--- a/Cloud Computing/Azure/Developer/ARM templates/2.0 ARM Template best practices.md
+++ b/Cloud Computing/Azure/Developer/ARM templates/2.0 ARM Template best practices.md
@@ -93,3 +93,180 @@ If the resource group's region is temporarily unavailable, you can't update reso
 - Don't provide default values for user names, passwords, or any value that requires a `secureString` type.
     
 - Don't provide default values for properties that increase the attack surface area of the application.
+
+### Location recommendations for parameters
+
+* Use a parameter to specify the location for resources, and set the default value to `resourceGroup().location`. Providing a location parameter enables users of the template to specify a location where they have permission to deploy resources.
+
+```JSON
+"parameters": {
+   "location": {
+     "type": "string",
+     "defaultValue": "[resourceGroup().location]",
+     "metadata": {
+       "description": "The location in which the resources should be deployed."
+     }
+   }
+}
+```
+
+- Don't specify `allowedValues` for the location parameter. The locations you specify might not be available in all clouds.
+    
+- Use the location parameter value for resources that are likely to be in the same location. This approach minimizes the number of times users are asked to provide location information.
+    
+- For resources that aren't available in all locations, use a separate parameter or specify a literal location value.
+
+## Variables
+
+The following information can be helpful when you work with [variables](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/variables):
+
+- Use camel case for variable names.
+    
+- Use variables for values that you need to use more than once in a template. If a value is used only once, a hard-coded value makes your template easier to read.
+    
+- Use variables for values that you construct from a complex arrangement of template functions. Your template is easier to read when the complex expression only appears in variables.
+    
+- You can't use the [reference](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/template-functions-resource#reference) function in the `variables` section of the template. The `reference` function derives its value from the resource's runtime state. However, variables are resolved during the initial parsing of the template. Construct values that need the `reference` function directly in the `resources` or `outputs` section of the template.
+    
+- Include variables for resource names that must be unique.
+    
+- Use a [copy loop in variables](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/copy-variables) to create a repeated pattern of JSON objects.
+    
+- Remove unused variables.
+
+## API version
+
+Set the `apiVersion` property to a hard-coded API version for the resource type. When creating a new template, we recommend you use the latest API version for a resource type. To determine available values, see [template reference](https://learn.microsoft.com/en-us/azure/templates/).
+
+When your template works as expected, we recommend you continue using the same API version. By using the same API version, you don't have to worry about breaking changes that might be introduced in later versions.
+
+Don't use a parameter for the API version. Resource properties and values can vary by API version. IntelliSense in a code editor can't determine the correct schema when the API version is set to a parameter. If you pass in an API version that doesn't match the properties in your template, the deployment will fail.
+
+Don't use variables for the API version.
+
+## Resource dependencies
+
+When deciding what [dependencies](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/resource-dependency) to set, use the following guidelines:
+
+- Use the `reference` function and pass in the resource name to set an implicit dependency between resources that need to share a property. Don't add an explicit `dependsOn` element when you've already defined an implicit dependency. This approach reduces the risk of having unnecessary dependencies. For an example of setting an implicit dependency, see [reference and list functions](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/resource-dependency#reference-and-list-functions).
+    
+- Set a child resource as dependent on its parent resource.
+    
+- Resources with the [condition element](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/conditional-resource-deployment) set to `false` are automatically removed from the dependency order. Set the dependencies as if the resource is always deployed.
+    
+- Let dependencies cascade without setting them explicitly. For example, your virtual machine depends on a virtual network interface, and the virtual network interface depends on a virtual network and public IP addresses. Therefore, the virtual machine is deployed after all three resources, but don't explicitly set the virtual machine as dependent on all three resources. This approach clarifies the dependency order and makes it easier to change the template later.
+    
+- If a value can be determined before deployment, try deploying the resource without a dependency. For example, if a configuration value needs the name of another resource, you might not need a dependency. This guidance doesn't always work because some resources verify the existence of the other resource. If you receive an error, add a dependency.
+
+## Resources
+
+The following information can be helpful when you work with [resources](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/syntax#resources):
+
+- To help other contributors understand the purpose of the resource, specify `comments` for each resource in the template.
+```JSON
+"resources": [
+  {
+    "name": "[variables('storageAccountName')]",
+    "type": "Microsoft.Storage/storageAccounts",
+    "apiVersion": "2019-06-01",
+    "location": "[resourceGroup().location]",
+    "comments": "This storage account is used to store the VM disks.",
+      ...
+  }
+]
+```
+
+If your ARM template is stored in a `.jsonc` file, comments using the `//` syntax are supported, as shown here.
+
+```JSON
+"resources": [
+  {
+    // This storage account is used to store the VM disks.
+    "name": "[variables('storageAccountName')]",
+    "type": "Microsoft.Storage/storageAccounts",
+    "apiVersion": "2019-06-01",
+    "location": "[resourceGroup().location]",
+      ...
+  }
+]
+```
+
+* If you use a _public endpoint_ in your template (such as an Azure Blob storage public endpoint), _don't hard-code_ the namespace. Use the `reference` function to dynamically retrieve the namespace. You can use this approach to deploy the template to different public namespace environments without manually changing the endpoint in the template. Set the API version to the same version that you're using for the storage account in your template.
+```JSON
+"diagnosticsProfile": {
+  "bootDiagnostics": {
+    "enabled": "true",
+    "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName')), '2019-06-01').primaryEndpoints.blob]"
+  }
+}
+```
+
+If the storage account is deployed in the same template that you're creating and the name of the storage account isn't shared with another resource in the template, you don't need to specify the provider namespace or the `apiVersion` when you reference the resource. The following example shows the simplified syntax.
+
+```JSON
+"diagnosticsProfile": {
+  "bootDiagnostics": {
+    "enabled": "true",
+    "storageUri": "[reference(variables('storageAccountName')).primaryEndpoints.blob]"
+  }
+}
+```
+
+You also can reference an existing storage account that's in a different resource group.
+
+```JSON
+"diagnosticsProfile": {
+  "bootDiagnostics": {
+    "enabled": "true",
+    "storageUri": "[reference(resourceId(parameters('existingResourceGroup'), 'Microsoft.Storage/storageAccounts', parameters('existingStorageAccountName')), '2019-06-01').primaryEndpoints.blob]"
+  }
+}
+```
+
+* Assign public IP addresses to a virtual machine only when an application requires it. To connect to a virtual machine for administrative purposes, use inbound NAT rules, a virtual network gateway, or a jumpbox.
+
+For more information about connecting to virtual machines, see:
+
+- [What is Azure Bastion?](https://learn.microsoft.com/en-us/azure/bastion/bastion-overview)
+- [How to connect and sign on to an Azure virtual machine running Windows](https://learn.microsoft.com/en-us/azure/virtual-machines/windows/connect-rdp)
+- [Setting up WinRM access for Virtual Machines in Azure Resource Manager](https://learn.microsoft.com/en-us/azure/virtual-machines/windows/connect-winrm)
+- [Connect to a Linux VM](https://learn.microsoft.com/en-us/azure/virtual-machines/linux-vm-connect)
+
+- The `domainNameLabel` property for public IP addresses must be unique. The `domainNameLabel` value must be between 3 and 63 characters long, and follow the rules specified by this regular expression: `^[a-z][a-z0-9-]{1,61}[a-z0-9]$`. Because the `uniqueString` function generates a string that is 13 characters long, the `dnsPrefixString` parameter is limited to 50 characters.
+
+```JSON
+"parameters": {
+  "dnsPrefixString": {
+    "type": "string",
+    "maxLength": 50,
+    "metadata": {
+      "description": "The DNS label for the public IP address. It must be lowercase. It should match the following regular expression, or it will raise an error: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$"
+    }
+  }
+},
+"variables": {
+  "dnsPrefix": "[concat(parameters('dnsPrefixString'),uniquestring(resourceGroup().id))]"
+}
+```
+
+- When you add a password to a custom script extension, use the `commandToExecute` property in the `protectedSettings` property.
+```JSON
+"properties": {
+  "publisher": "Microsoft.Azure.Extensions",
+  "type": "CustomScript",
+  "typeHandlerVersion": "2.0",
+  "autoUpgradeMinorVersion": true,
+  "settings": {
+    "fileUris": [
+      "[concat(variables('template').assets, '/lamp-app/install_lamp.sh')]"
+    ]
+  },
+  "protectedSettings": {
+    "commandToExecute": "[concat('sh install_lamp.sh ', parameters('mySqlPassword'))]"
+  }
+}
+```
+
+To ensure that secrets are encrypted when they are passed as parameters to VMs and extensions, use the `protectedSettings` property of the relevant extensions.
+
+- Specify explicit values for properties that have default values that could change over time. For example, if you're deploying an AKS cluster, you can either specify or omit the `kubernetesVersion` property. If you don't specify it, then [the cluster is defaulted to the N-1 minor version and latest patch](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions#azure-portal-and-cli-versions). When you deploy the cluster using an ARM template, this default behavior might not be what you expect. Redeploying your template may result in the cluster being upgraded to a new Kubernetes version unexpectedly. Instead, consider specifying an explicit version number and then manually changing it when you're ready to upgrade your cluster.
